tests/error/modifier_errors/ctrl_arg_type_arr.err
Error: Type mismatch (at $FILE:9:17)
  | 
7 | def test() -> None:
8 |     x = array(1, 2, 3)
9 |     with control(x):
  |                  ^ Expected expression of type `array[qubit, ?n]`, got
  |                    `array[int, 3]`

Guppy compilation failed due to 1 previous error
